<?xml version="1.0"?>
<package>
  <name>mapping</name>
  <version>0.0.0</version>
  <description>The mapping package</description>


  <maintainer email="ras@todo.todo">ras</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  <build_depend>tf</build_depend>


  <run_depend>tf</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
